--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "lint": "yarn eslint .",
     "csslint": "yarn stylelint ./app/**/*.scss",
     "analyze": "...",
-    "start": "yarn webpack --config webpack/development.js",
+    "dev": "yarn webpack --config webpack/development.js",
     "build": "yarn webpack --config webpack/production.js"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "autoprefixer": "^10.4.0",
     "clean-webpack-plugin": "^4.0.0",
     "critical-css-webpack-plugin": "^3.0.0",
     "css-loader": "^6.5.1",
@@ -21,6 +22,7 @@
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
     "mini-css-extract-plugin": "^2.4.5",
+    "postcss-loader": "^6.2.1",
     "sass": "^1.44.0",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
@@ -36,10 +38,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "connected-react-router": "^6.9.2",
     "immer": "^9.0.7",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5"
