--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "license": "MIT",
   "scripts": {
     "test": "yarn jest ./app --verbose --coverage",
-    "lint": "yarn eslint .",
+    "lint": "yarn eslint ./app",
     "csslint": "yarn stylelint ./app/**/*.scss",
-    "analyze": "...",
     "dev": "NODE_ENV=development yarn webpack serve --config webpack/development.js",
     "build": "NODE_ENV=production yarn webpack --config webpack/production.js"
   },
@@ -24,6 +23,7 @@
     "jest": "^27.3.1",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss-loader": "^6.2.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.44.0",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
@@ -41,13 +41,16 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router": "^5.1.17",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.2",
+    "history": "^5.1.0",
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router": "^5.2.1",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5"
   }
