--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "redux-saga": "^1.1.3",
