--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.1.5"
+    "reselect": "^4.1.5",
+    "web-vitals": "^2.1.2"
   }
 }
