--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-router": "^5.2.1",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
+    "sass-mq": "^5.0.1",
     "web-vitals": "^2.1.2"
   }
 }
