--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,7 +7,6 @@ extends:
   - plugin:react/recommended
   - plugin:@typescript-eslint/recommended
 
-
 parser: '@typescript-eslint/parser'
 
 parserOptions:
@@ -18,6 +17,7 @@ parserOptions:
 
 plugins:
   - react
+  - react-hooks
   - '@typescript-eslint'
 
 rules:
@@ -33,8 +33,6 @@ rules:
     - error
     - single
 
-  '@typescript-eslint/no-explicit-any': error
-
   semi:
     - error
     - never
@@ -45,3 +43,10 @@ rules:
     - null: ignore
 
   space-before-blocks: error
+
+  max-len:
+    - error
+    - code: 100
+
+  '@typescript-eslint/no-explicit-any': error
+  '@typescript-eslint/semi': off
