--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "connected-react-router": "^6.9.2",
     "history": "^5.1.0",
     "immer": "^9.0.7",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
