--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "build": "NODE_ENV=production yarn webpack --config webpack/production.js"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.16.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "autoprefixer": "^10.4.0",
+    "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.0.0",
     "critical-css-webpack-plugin": "^3.0.0",
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
     "eslint-plugin-react": "^7.27.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss-loader": "^6.2.1",
+    "react-svg-loader": "^3.0.3",
     "redux-logger": "^3.0.6",
     "sass": "^1.44.0",
     "sass-loader": "^12.3.0",
@@ -31,6 +35,7 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
+    "url-loader": "^4.1.1",
     "webpack": "^5.64.4",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
