--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "redux-logger": "^3.0.6",
     "sass": "^1.44.0",
     "sass-loader": "^12.3.0",
+    "sass-mq": "^5.0.1",
     "size-limit": "^7.0.4",
     "style-loader": "^3.3.1",
     "stylelint": "^14.1.0",
