--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
+    "react-focus-lock": "^2.7.1",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "redux-saga": "^1.1.3",
