Refactored the code

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint": "^8.3.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
     "mini-css-extract-plugin": "^2.4.5",
@@ -48,6 +49,7 @@
     "redux-logger": "^3.0.6",
     "sass": "^1.44.0",
     "sass-loader": "^12.3.0",
+    "sass-resources-loader": "^2.2.4",
     "size-limit": "^7.0.4",
     "style-loader": "^3.3.1",
     "stylelint": "^14.1.0",
