--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,5 +7,11 @@
         "selector-class-pattern": "^[A-Z].+$"
       }
     }
-  ]
+  ],
+  "rules": {
+    "color-no-invalid-hex": true,
+    "alpha-value-notation": "number",
+    "number-leading-zero": "never",
+    "scss/at-import-no-partial-leading-underscore": null
+  }
 }
