--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.2",
+    "fork-ts-checker-webpack-plugin": "^6.5.0",
     "history": "^5.1.0",
     "immer": "^9.0.7",
     "normalize.css": "^8.0.1",
