--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "sass-loader": "^12.3.0",
     "sass-resources-loader": "^2.2.4",
     "size-limit": "^7.0.4",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.1.0",
     "stylelint-config-standard-scss": "^3.0.0",
