--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "yarn eslint ./app",
     "csslint": "yarn stylelint ./app/**/*.scss",
     "dev": "NODE_ENV=development yarn webpack serve --config webpack/development.js",
-    "build": "NODE_ENV=production yarn webpack --config webpack/production.js"
+    "build": "NODE_ENV=production yarn webpack --config webpack/production.js",
+    "vendor": "yarn webpack --config webpack/vendor.js"
   },
   "size-limit": [
     {
