--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.2",
+    "focus-lock": "^0.10.1",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
     "history": "^5.1.0",
     "immer": "^9.0.7",
@@ -79,6 +80,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
+    "react-focus-lock": "^2.7.1",
+    "react-hook-form": "^7.22.5",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "redux-saga": "^1.1.3",
