--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@size-limit/preset-app": "^7.0.4",
+    "@testing-library/react": "^12.1.2",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -66,6 +67,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "@testing-library/jest-dom": "testing-library/jest-dom",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.17",
