--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "style-loader": "^3.3.1",
     "stylelint": "^14.1.0",
     "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "url-loader": "^4.1.1",
