--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@babel/preset-typescript": "^7.16.0",
     "@size-limit/preset-app": "^7.0.4",
     "@types/enzyme": "^3.10.10",
-    "@types/jest": "^27.0.3",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.7",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
@@ -69,8 +72,6 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.17",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
