--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-react": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
     "@size-limit/preset-app": "^7.0.4",
+    "@testing-library/react": "^12.1.2",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.7",
@@ -73,10 +74,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react-router": "^5.1.17",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.2",
+    "focus-lock": "^0.10.1",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
     "history": "^5.1.0",
     "immer": "^9.0.7",
@@ -85,6 +88,7 @@
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
     "react-focus-lock": "^2.7.1",
+    "react-hook-form": "^7.22.5",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "redux": "^4.1.2",
