--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
+    "jest-transformer-svg": "^1.0.2",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss-loader": "^6.2.1",
     "react-svg-loader": "^3.0.3",
