--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "pnpm jest ./app --verbose --coverage",
     "lint": "pnpm eslint ./app",
+    "lintfix": "pnpm eslint --fix ./app",
     "csslint": "pnpm stylelint \"./app/**/*.scss\"",
     "cssfix": "pnpm stylelint --fix \"./app/**/*.scss\"",
     "dev": "NODE_ENV=development pnpm webpack serve --config webpack/development.js",
@@ -44,7 +45,7 @@
     "css-loader": "^6.5.1",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "eslint": "^8.3.0",
+    "eslint": "^8.6.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
