--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "test": "pnpm jest ./app --verbose --coverage",
-    "lint": "pnpm eslint ./app",
-    "csslint": "pnpm stylelint \"./app/**/*.scss\"",
-    "cssfix": "pnpm stylelint --fix \"./app/**/*.scss\"",
-    "dev": "NODE_ENV=development pnpm webpack serve --config webpack/development.js",
-    "build": "NODE_ENV=production pnpm webpack --config webpack/production.js",
-    "vendor": "pnpm webpack --config webpack/vendor.js",
-    "prod_stats": "pnpm webpack --config webpack/production.js --profile --json=stats.json",
-    "analyze_bundle": "pnpm webpack-bundle-analyzer stats.json"
+    "test": "yarn jest ./app --verbose --coverage",
+    "lint": "yarn eslint ./app",
+    "csslint": "yarn stylelint \"./app/**/*.scss\"",
+    "cssfix": "yarn stylelint --fix \"./app/**/*.scss\"",
+    "dev": "NODE_ENV=development yarn webpack serve --config webpack/development.js",
+    "build": "NODE_ENV=production yarn webpack --config webpack/production.js",
+    "vendor": "yarn webpack --config webpack/vendor.js",
+    "prod_stats": "yarn webpack --config webpack/production.js --profile --json=stats.json",
+    "analyze_bundle": "yarn webpack-bundle-analyzer stats.json"
   },
   "size-limit": [
     {
@@ -27,14 +27,12 @@
     "@babel/preset-typescript": "^7.16.0",
     "@size-limit/preset-app": "^7.0.4",
     "@testing-library/react": "^12.1.2",
-    "@types/enzyme": "^3.10.10",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.7",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.4.4",
     "babel-loader": "^8.2.3",
@@ -42,8 +40,6 @@
     "copy-webpack-plugin": "^10.0.0",
     "critical-css-webpack-plugin": "^3.0.0",
     "css-loader": "^6.5.1",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.2",
     "eslint": "^8.3.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
