--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "test": "pnpm jest ./app --verbose --coverage",
-    "lint": "pnpm eslint ./app",
-    "lintfix": "pnpm eslint --fix ./app",
-    "csslint": "pnpm stylelint \"./app/**/*.scss\"",
-    "cssfix": "pnpm stylelint --fix \"./app/**/*.scss\"",
-    "dev": "NODE_ENV=development pnpm webpack serve --config webpack/development.js",
-    "build": "NODE_ENV=production pnpm webpack --config webpack/production.js",
-    "vendor": "pnpm webpack --config webpack/vendor.js",
-    "prod_stats": "pnpm webpack --config webpack/production.js --profile --json=stats.json",
-    "analyze_bundle": "pnpm webpack-bundle-analyzer stats.json"
+    "test": "yarn jest ./app --verbose --coverage",
+    "lint": "yarn eslint ./app",
+    "lintfix": "yarn eslint --fix ./app",
+    "csslint": "yarn stylelint \"./app/**/*.scss\"",
+    "cssfix": "yarn stylelint --fix \"./app/**/*.scss\"",
+    "dev": "NODE_ENV=development yarn webpack serve --config webpack/development.js",
+    "build": "NODE_ENV=production yarn webpack --config webpack/production.js",
+    "vendor": "yarn webpack --config webpack/vendor.js",
+    "prod_stats": "yarn webpack --config webpack/production.js --profile --json=stats.json",
+    "analyze_bundle": "yarn webpack-bundle-analyzer stats.json"
   },
   "size-limit": [
     {
