--- a/package.json
+++ b/package.json
@@ -82,6 +82,8 @@
     "focus-lock": "^0.10.1",
     "fork-ts-checker-webpack-plugin": "^6.5.0",
     "history": "^5.1.0",
+    "i18next": "^21.6.5",
+    "i18next-browser-languagedetector": "^6.1.2",
     "immer": "^9.0.7",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -89,6 +91,7 @@
     "react-error-boundary": "^3.1.4",
     "react-focus-lock": "^2.7.1",
     "react-hook-form": "^7.22.5",
+    "react-i18next": "^11.15.3",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "redux": "^4.1.2",
