--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-hook-form": "^7.22.5",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
+    "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
