--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5",
     "sass-mq": "^5.0.1",
+    "toastr": "^2.1.4",
     "web-vitals": "^2.1.2"
   }
 }
