--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.17",
+    "@types/toastr": "^2.1.39",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "focus-lock": "^0.10.1",
