--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "i18next": "^21.6.5",
     "i18next-browser-languagedetector": "^6.1.2",
     "immer": "^9.0.7",
+    "jest-transform-stub": "^2.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
