add settings component with ant disign

--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.17",
+    "antd": "^4.18.4",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "focus-lock": "^0.10.1",
@@ -86,6 +87,8 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "immer": "^9.0.7",
     "jest-transform-stub": "^2.0.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
