--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.17",
@@ -86,6 +87,7 @@
     "i18next-browser-languagedetector": "^6.1.2",
     "immer": "^9.0.7",
     "jest-transform-stub": "^2.0.0",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
